--- a/css/presentation.css
+++ b/css/presentation.css
@@ -1,18 +1,10 @@
 .info-box .presentation {
   text-transform: uppercase;
   width: 95%;
+  margin: 0 auto;
+  border: 1px solid black;
 }
-.info-box .presentation th, .info-box .presentation td {
+.info-box .presentation li {
   text-align: justify;
   padding: 10px;
-}
-.info-box .presentation th {
-  border-bottom: none;
-  border-top: none;
-}
-.info-box .presentation tr {
-  box-sizing: border-box;
-  border: 1px solid #fff;
-  border-radius: 5px;
-  color: #fff;
 }/*# sourceMappingURL=presentation.css.map */
