--- a/css/header.scss
+++ b/css/header.scss
@@ -1,49 +1,60 @@
-section.total-container{
+
+body{
+  background: rgba(#fff,0.1);
+}
+
+.total-container{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0 auto;
   box-sizing: border-box;
+  justify-content: space-between;
+  background: black;
   width: 100%;
   height: 100%;
-  max-width: 1200px;
-  border: 3px solid #dbc191;
+  max-width: 1400px;
+  margin: 0 auto;
+
+  
+  header{
+    width: 26%;
+    height: 100%;
+    background: #fff;
+    border: 1px solid red;
+ 
+    .id-photo{
+      display: block;
+      margin: 0 auto;
+      padding-top: 10px;
+      width: 95%;
+      border-radius: 5px;
+      overflow: hidden;
+      
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }//img
+
+    }//figure
+  
+    .info-box{
+      box-sizing: border-box;
+      margin: 10px auto;
+      padding: 10px;
+      width: 95%;
+      background: #dbc191;
+    }//info-box
+
+  } // side intro section
+  
+  main{
+    width: 73.9%;
+    height: 100%;
+    background: #00f;
+  } // main page
+
 }
 
-.side-intro-section{
-  width: 26%;
-  height: 100%;
-  background: #ff0;
-  .id-photo{
-    display: block;
-    margin: 0 auto;
-    margin-top: 10px;
-    width: 95%;
-    border-radius: 5px;
-    overflow: hidden;
-    img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-  }
-
-  .info-box{
-    box-sizing: border-box;
-    margin: 10px auto;
-    padding: 10px;
-    width: 95%;
-    background: #dbc191;
-  }
-
-}
-
-.main-page{
-  width: 73.7%;
-  height: 100%;
-  background: #00f;
-}
 
 @media screen and (min-width:1000px) {
 
