--- a/css/header.css
+++ b/css/header.css
@@ -1,29 +1,51 @@
 body {
-  background: rgba(255, 255, 255, 0.1);
+  background: #fffaef;
+  box-sizing: border-box;
 }
 
 .total-container {
   display: flex;
   box-sizing: border-box;
-  justify-content: space-between;
-  background: black;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+  background: rgba(255, 255, 255, 0.1);
   width: 100%;
-  height: 100%;
   max-width: 1400px;
   margin: 0 auto;
 }
-.total-container header {
-  width: 26%;
-  height: 100%;
-  background: #fff;
-  border: 1px solid red;
+@media screen and (min-width: 1100px) {
+  .total-container {
+    justify-content: space-between;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .total-container {
+    flex-wrap: wrap;
+  }
+  .total-container .id-photo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .total-container header {
+    width: 23%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .total-container header {
+    width: 30%;
+  }
 }
 .total-container header .id-photo {
   display: block;
   margin: 0 auto;
   padding-top: 10px;
   width: 95%;
-  border-radius: 5px;
   overflow: hidden;
 }
 .total-container header .id-photo img {
@@ -31,6 +53,7 @@ body {
   height: 100%;
   object-fit: cover;
   object-position: center;
+  border-radius: 5px;
 }
 .total-container header .info-box {
   box-sizing: border-box;
@@ -40,7 +63,17 @@ body {
   background: #dbc191;
 }
 .total-container main {
-  width: 73.9%;
-  height: 100%;
-  background: #00f;
+  box-sizing: border-box;
+}
+@media screen and (min-width: 1100px) {
+  .total-container main {
+    width: 77%;
+    height: 100%;
+    background: rgb(228, 176, 80);
+  }
+}
+@media screen and (max-width: 1100px) {
+  .total-container main {
+    width: 100%;
+  }
 }/*# sourceMappingURL=header.css.map */
