--- a/css/header.scss
+++ b/css/header.scss
@@ -1,31 +1,51 @@
 
 body{
-  background: rgba(#fff,0.1);
+  background: rgba(rgb(255, 250, 239),1);
+  box-sizing: border-box;
 }
 
 .total-container{
   display: flex;
   box-sizing: border-box;
-  justify-content: space-between;
-  background: black;
+  box-shadow: 5px 5px 20px rgba(0,0,0,0.2);
+  background: rgba(255,255,255,0.1);
   width: 100%;
-  height: 100%;
   max-width: 1400px;
   margin: 0 auto;
+  
+  @media screen and (min-width:1100px) {
+    justify-content: space-between;
+    height: 100%;   
+  }
 
+  @media screen and (max-width:1100px) {
+    flex-wrap: wrap;
+
+    .id-photo{
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+    }
+
+  }//mid
   
   header{
-    width: 26%;
-    height: 100%;
-    background: #fff;
-    border: 1px solid red;
- 
+    
+    @media screen and (min-width:1100px) {
+      width: 23%;
+      height: 100%;
+      background: rgba(255,255,255,0.1);
+      box-sizing: border-box;      
+    }//lg
+    @media screen and (max-width:1100px) {
+      width: 30%;
+    }//mid
+    
     .id-photo{
       display: block;
       margin: 0 auto;
       padding-top: 10px;
       width: 95%;
-      border-radius: 5px;
       overflow: hidden;
       
       img{
@@ -33,6 +53,7 @@ body{
         height: 100%;
         object-fit: cover;
         object-position: center;
+        border-radius: 5px;
       }//img
 
     }//figure
@@ -48,21 +69,19 @@ body{
   } // side intro section
   
   main{
-    width: 73.9%;
-    height: 100%;
-    background: #00f;
+    box-sizing: border-box;
+    
+    @media screen and (min-width:1100px) {
+      width: 77%;
+      height: 100%;
+      background: rgb(228, 176, 80);
+      
+    }
+    @media screen and (max-width:1100px) {
+      width: 100%;
+    }
   } // main page
 
 }
 
 
-@media screen and (min-width:1000px) {
-
-}//lg
-@media screen and (max-width:600px) and (min-width:1000px) {
-
-  
-}//mid
-@media screen and (max-width:600px){
-
-}//sm
